Está pronto, falta apenas ajustes e arrumar o código

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -70,14 +70,14 @@ img {
 }
 
 /* **************************************************************** CONTAINER */
-.posts__title, .cardapio__title, .testimonials__title, .header__container, .info__title, .menu__container, .about__container, .posts__body, .cardapio__container, .cardapio__body, .footer__container {
+.posts__title, .cardapio__title, .testimonials__title, .form__title, .header__container, .info__title, .form__content, .menu__container, .about__container, .posts__body, .cardapio__container, .footer__container {
   width: 100%;
   padding-right: 1rem;
   padding-left: 1rem;
 }
 
 @media (min-width: 576px) {
-  .posts__title, .cardapio__title, .testimonials__title, .header__container, .info__title, .menu__container, .about__container, .posts__body, .cardapio__container, .cardapio__body, .footer__container {
+  .posts__title, .cardapio__title, .testimonials__title, .form__title, .header__container, .info__title, .form__content, .menu__container, .about__container, .posts__body, .cardapio__container, .footer__container {
     width: 540px;
     margin-right: auto;
     margin-left: auto;
@@ -86,7 +86,7 @@ img {
   }
 }
 @media (min-width: 768px) {
-  .header__container, .info__title, .menu__container, .about__container, .posts__body, .cardapio__container, .cardapio__body, .footer__container {
+  .header__container, .info__title, .form__content, .menu__container, .about__container, .posts__body, .cardapio__container, .footer__container {
     width: 720px;
     margin-right: auto;
     margin-left: auto;
@@ -95,7 +95,7 @@ img {
   }
 }
 @media (min-width: 960px) {
-  .menu__container, .about__container, .posts__body, .cardapio__container, .cardapio__body, .footer__container {
+  .form__content, .menu__container, .about__container, .posts__body, .cardapio__container, .footer__container {
     width: 920px;
     margin-right: auto;
     margin-left: auto;
@@ -104,7 +104,7 @@ img {
   }
 }
 @media (min-width: 1200px) {
-  .menu__container, .about__container, .posts__body, .cardapio__container, .cardapio__body, .footer__container {
+  .menu__container, .about__container, .posts__body, .cardapio__container, .footer__container {
     width: 1140px;
     margin-right: auto;
     margin-left: auto;
@@ -116,10 +116,6 @@ img {
 @media (min-width: 576px) {
   .testimonials__content, .footer__about, .footer__contact, .footer__comments, .footer__posts {
     width: calc(100% / 12 * 6);
-  }
-
-  .cardapio__tab {
-    width: calc(100% / 12 * 12);
   }
 }
 @media (min-width: 768px) {
@@ -269,7 +265,7 @@ body .menu-colapse-content.menu-side-bottom {
 /* **************************************************************** MODAL */
 body {
   font-family: "Poppins", sans-serif;
-  color: #484E51;
+  color: #696969;
   background-color: #F9F9F9;
 }
 
@@ -290,13 +286,13 @@ p {
   line-height: 1.6em;
 }
 
-.about__title, .posts__title, .cardapio__title, .info__title, .testimonials__title {
+.about__title, .posts__title, .cardapio__title, .info__title, .testimonials__title, .form__title {
   text-align: center;
 }
-.about__title span, .posts__title span, .cardapio__title span, .info__title span, .testimonials__title span {
+.about__title span, .posts__title span, .cardapio__title span, .info__title span, .testimonials__title span, .form__title span {
   font-family: "Lora", serif;
 }
-.about__title h2, .posts__title h2, .cardapio__title h2, .info__title h2, .testimonials__title h2 {
+.about__title h2, .posts__title h2, .cardapio__title h2, .info__title h2, .testimonials__title h2, .form__title h2 {
   font-family: "Lora", serif;
   font-weight: 500;
   font-size: 1.8em;
@@ -304,11 +300,11 @@ p {
   margin-top: 0.5rem;
 }
 @media (min-width: 576px) {
-  .about__title h2, .posts__title h2, .cardapio__title h2, .info__title h2, .testimonials__title h2 {
+  .about__title h2, .posts__title h2, .cardapio__title h2, .info__title h2, .testimonials__title h2, .form__title h2 {
     font-size: 2.7em;
   }
 }
-.about__title h2::after, .posts__title h2::after, .cardapio__title h2::after, .info__title h2::after, .testimonials__title h2::after {
+.about__title h2::after, .posts__title h2::after, .cardapio__title h2::after, .info__title h2::after, .testimonials__title h2::after, .form__title h2::after {
   content: "......";
   display: block;
   font-size: 24px;
@@ -352,19 +348,22 @@ p {
   position: fixed;
   width: 100%;
   top: 0;
-  z-index: 1;
+  z-index: 5;
 }
 .menu__container {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
 }
-.menu__logo img {
-  max-width: 5rem;
-  opacity: 0.2;
+.menu__logo p {
+  font-family: "Lora", serif;
+  font-size: 1.2em;
+  color: #696969;
+  font-variant: small-caps;
+  letter-spacing: 0.2em;
 }
-.menu__logo img:hover {
-  opacity: 1;
+.menu__logo p:hover {
+  color: #FFFFFF;
 }
 .menu__options {
   flex-direction: row;
@@ -434,18 +433,15 @@ p {
 }
 
 .header {
-  background-image: url("../img/dm22__image_01-min.jpg");
+  background-image: url("../img/header.jpg");
   background-size: cover;
+  background-position: center;
   color: #FFFFFF;
   text-align: center;
 }
 .header__container {
   height: 100vh;
   justify-content: center;
-}
-.header__container img {
-  max-width: 6rem;
-  margin: 0 auto;
 }
 .header__container h1 {
   font-family: "Lora", serif;
@@ -498,7 +494,7 @@ p {
 }
 
 .about {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../img/dm22__image_15-min.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../img/background.jpg");
   background-size: cover;
 }
 @media (min-width: 768px) {
@@ -551,6 +547,7 @@ p {
 .posts__img img {
   transition: transform 0.5s;
   max-height: 20rem;
+  object-position: bottom;
 }
 .posts__img div {
   position: absolute;
@@ -569,8 +566,9 @@ p {
 }
 
 .info {
-  background-image: url("../img/dm22__image_07-min-1.jpg");
+  background-image: url("../img/info.jpg");
   background-size: cover;
+  background-position: center;
   padding-bottom: 13.5rem;
 }
 .info__title h2, .info__title span, .info__title p {
@@ -590,11 +588,82 @@ p {
 .cardapio__body {
   align-items: center;
   justify-content: center;
-  padding: 2rem;
 }
 .cardapio__tab {
+  width: 100%;
   align-items: center;
   margin: 0 0 2rem 0;
+}
+.cardapio__links {
+  font-size: 0.8em;
+  margin-top: 1rem;
+}
+@media (min-width: 768px) {
+  .cardapio__links {
+    margin-top: 0;
+  }
+}
+.cardapio__content {
+  width: 100%;
+}
+@media (min-width: 768px) {
+  .cardapio__content {
+    width: 70%;
+  }
+}
+.cardapio__item {
+  width: 100%;
+  margin: 0 auto;
+  margin-top: 1rem;
+}
+@media (min-width: 576px) {
+  .cardapio__item {
+    align-items: center;
+    flex-direction: row;
+  }
+}
+.cardapio__item img {
+  width: 70px;
+  height: 70px;
+}
+.cardapio__item > div {
+  justify-content: center;
+  margin-left: 1rem;
+  width: calc(100% - 86px);
+}
+.cardapio__item > div div {
+  flex-direction: row;
+  display: block;
+}
+@media (min-width: 576px) {
+  .cardapio__item > div div {
+    justify-content: space-between;
+    display: flex;
+  }
+}
+.cardapio__item > div div span:nth-child(1) {
+  font-family: "Lora", serif;
+  font-weight: 700;
+  color: #282828;
+  position: relative;
+}
+.cardapio__item > div div span:nth-child(1)::after {
+  content: " ......";
+  margin-left: 0.5rem;
+}
+@media (min-width: 576px) {
+  .cardapio__item > div div span:nth-child(1)::after {
+    content: " ........................................................................................................................";
+    position: absolute;
+  }
+}
+.cardapio__item > div div span:nth-child(2) {
+  background-color: #FFFFFF;
+  z-index: 1;
+  padding-left: 0.5rem;
+}
+.cardapio__item > div > p {
+  font-size: 0.8em;
 }
 .cardapio__footer {
   text-align: center;
@@ -606,7 +675,7 @@ p {
 }
 
 .testimonials {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../img/dm22__image_15-min.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../img/background.jpg");
   background-size: cover;
 }
 .testimonials__tab {
@@ -648,23 +717,95 @@ p {
   bottom: -3rem;
   right: 0;
 }
-.testimonials__content img {
-  width: 5rem;
+.testimonials__content > div > div {
+  width: 6rem;
+  height: 6rem;
   margin: 0 auto;
   border-radius: 50%;
+  align-content: center;
+}
+.testimonials__content > div > div img {
+  width: 130%;
+  align-self: center;
 }
 .testimonials__content span {
   font-family: "Lora", serif;
 }
 
+.form {
+  background-image: url("../img/form.jpg");
+  background-size: cover;
+  background-position: center;
+}
+.form__title span, .form__title h2 {
+  color: #FFFFFF;
+}
+.form__content form {
+  display: flex;
+  flex-direction: column;
+}
+.form__content div {
+  flex-direction: row;
+}
+.form__content div input {
+  width: 100%;
+}
+@media (min-width: 576px) {
+  .form__content div input {
+    margin: 0 0.5rem;
+    width: calc(50% - 1rem);
+  }
+}
+@media (min-width: 576px) {
+  .form__content div:last-of-type input {
+    width: calc(33.3333333% - 1rem);
+  }
+}
+.form__content input {
+  background-color: transparent;
+  border: none;
+  border-bottom: 0.0625rem solid rgba(255, 255, 255, 0.3);
+  outline: none;
+  padding: 1rem 0.5rem 0.5rem 0.5rem;
+  margin-bottom: 1rem;
+  color: #BCBCBC;
+}
+.form__content input:hover, .form__content input:focus {
+  border-bottom: 0.0625rem solid #BCBCBC;
+}
+.form__content input::placeholder {
+  color: rgba(255, 255, 255, 0.3);
+}
+.form__content button {
+  border: 0.0625rem solid #BCBCBC;
+  background-color: transparent;
+  border-radius: 1000rem;
+  padding: 0.5rem 1.5rem;
+  font-size: 0.6em;
+  font-weight: 700;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+  color: #BCBCBC;
+  margin-top: 0.75rem;
+  outline: none;
+}
+@media (min-width: 576px) {
+  .form__content button {
+    align-self: center;
+  }
+}
+.form__content button:hover {
+  background-color: #BCBCBC;
+  color: #282828;
+}
+
 .footer {
-  background-color: #303030;
+  background-color: #282828;
   padding-top: 3rem;
   padding-bottom: 3rem;
 }
 .footer__container {
   flex-direction: row;
-  color: #696969;
 }
 .footer__about, .footer__contact, .footer__comments, .footer__posts {
   margin-bottom: 2.5rem;
@@ -710,8 +851,9 @@ p {
   margin-right: 0.5rem;
 }
 .footer__contact div div:hover {
-  background-color: #404040;
-  color: #FFFFFF;
+  background-color: #696969;
+  border: 0.0625rem solid #696969;
+  color: #282828;
 }
 .footer__contact div i {
   font-size: 1.3em;
@@ -719,11 +861,6 @@ p {
 }
 .footer__posts {
   margin-bottom: 0;
-}
-.footer__about img {
-  max-width: 5rem;
-  margin-bottom: 1.8rem;
-  opacity: 0.2;
 }
 .footer__about p {
   font-weight: 500;
@@ -751,10 +888,15 @@ p {
   color: #BCBCBC;
   padding: 0.75rem 1rem;
   margin-top: 0.75rem;
+  font-weight: 700;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+  font-size: 0.65em;
 }
 .footer__about button:hover {
-  background-color: #404040;
-  color: #FFFFFF;
+  background-color: #696969;
+  color: #282828;
+  border: 0.0625rem solid #696969;
 }
 .footer__copy {
   width: 100%;
