--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -269,6 +269,11 @@ body {
   background-color: #F9F9F9;
 }
 
+div, i, button, a, p {
+  transition-duration: 0.5s;
+  transition-property: color, background-color, opacity;
+}
+
 section {
   padding-top: 3rem;
   padding-bottom: 3rem;
@@ -778,7 +783,7 @@ p {
 }
 .form__content button {
   border: 0.0625rem solid #BCBCBC;
-  background-color: transparent;
+  background-color: rgba(255, 255, 255, 0);
   border-radius: 1000rem;
   padding: 0.5rem 1.5rem;
   font-size: 0.6em;
@@ -788,6 +793,7 @@ p {
   color: #BCBCBC;
   margin-top: 0.75rem;
   outline: none;
+  transition: background-color 0.5s;
 }
 @media (min-width: 576px) {
   .form__content button {
