--- a/src/frame/css/style.scss
+++ b/src/frame/css/style.scss
@@ -8,6 +8,11 @@ body {
   background-color: #F9F9F9;
 }
 
+div, i, button, a, p {
+  transition-duration: 0.5s;
+  transition-property: color, background-color, opacity;
+}
+
 section {
   padding-top: 3rem;
   padding-bottom: 3rem;
@@ -548,7 +553,7 @@ p {
     }
     button {
       border: 0.0625rem solid #BCBCBC;
-      background-color: transparent;
+      background-color: rgba(255, 255, 255, 0);
       border-radius: 1000rem;
       padding: 0.5rem 1.5rem;
       font-size: 0.6em;
@@ -558,6 +563,7 @@ p {
       color: #BCBCBC;
       margin-top: 0.75rem;
       outline: none;
+      transition: background-color 0.5s;
       @media (min-width: func-container(sm)) {
         align-self: center;
       }
