--- a/src/frame/css/style.scss
+++ b/src/frame/css/style.scss
@@ -251,6 +251,7 @@ p {
   }
   img {
     @include func-col(md-6);
+    max-height: 500px;
   }
   &__title {
     @include func-col(md-6);
@@ -343,19 +344,19 @@ p {
     margin-top: 6rem;
   }
   &__body {
+    width: 100%;
+    margin-top: 2rem;
+    align-self: flex-start;
+   
     
-    align-items: center;
-    justify-content: center;
-    @media(min-width: func-container(md)) {
-      
-    }
+   
     
   }
   &__tab {
     @include comp-tab(line);
     width: 100%;
     align-items: center;
-    margin: 0 0 2rem 0;
+    margin: 0 0 1rem 0;
   }
   &__links {
     font-size: 0.8em;
@@ -365,7 +366,11 @@ p {
     }
   }
   &__content {
-    width: 100%;
+    width: 90%;
+    margin: 0 auto;
+    padding: 0 !important;
+    align-self: flex-start;
+   
     @media(min-width: func-container(md)) {
       width: 70%; 
     }
@@ -376,19 +381,22 @@ p {
     width: 100%;
     margin: 0 auto;
     margin-top: 1rem;
-    
+    align-items: center;
+    text-align: center;
     @media(min-width: func-container(sm)) {
-      align-items: center;
+      //align-items: stretch;
       flex-direction: row; 
+      text-align: left;
     }
     img {
       width: 70px;
       height: 70px;
     }
     > div {
-      justify-content: center;
-      margin-left: 1rem;
-      width: calc(100% - 86px);
+      @media(min-width: func-container(sm)) { 
+        width: calc(100% - 86px);
+        margin-left: 1rem;
+      }
       div {
         flex-direction: row;
         display: block;
@@ -426,7 +434,7 @@ p {
   }
   &__footer {
     text-align: center;
-    margin-bottom: 4rem;
+    margin-bottom: 6rem;
     a {
       align-self: center;
       margin-top: 1rem;
@@ -444,7 +452,7 @@ p {
   }
   &__tab {
     @include comp-tab(box);
-    align-content: center;
+    align-items: center;
     flex-direction: column-reverse;
   }
   &__link {
@@ -543,33 +551,30 @@ p {
       outline: none;
       padding: 1rem 0.5rem 0.5rem 0.5rem;
       margin-bottom: 1rem;
-      color: #BCBCBC;
+      color: rgba(255, 255, 255, 1);
       &:hover, &:focus {
-        border-bottom: 0.0625rem solid #BCBCBC;
+        border-bottom: 0.0625rem solid rgba(255, 255, 255, 1);
       }
       &::placeholder {
-        color: rgba(255, 255, 255, 0.3);
+        color: rgba(255, 255, 255, 0.5);
       }
     }
     button {
-      border: 0.0625rem solid #BCBCBC;
-      background-color: rgba(255, 255, 255, 0);
+      border: 0.0625rem solid rgba(255, 255, 255, 1);
+      background-color: rgba(255, 255, 255, 1);
       border-radius: 1000rem;
       padding: 0.5rem 1.5rem;
       font-size: 0.6em;
       font-weight: 700;
       letter-spacing: 0.2em;
       text-transform: uppercase;
-      color: #BCBCBC;
+      color: #282828;
       margin-top: 0.75rem;
       outline: none;
       transition: background-color 0.5s;
+      cursor: pointer;
       @media (min-width: func-container(sm)) {
         align-self: center;
-      }
-      &:hover {
-        background-color: #BCBCBC;
-        color: #282828;
       }
     }
   }
@@ -579,6 +584,10 @@ p {
   background-color: #282828;
   padding-top: 3rem;
   padding-bottom: 3rem;
+  text-align: center;
+  @media (min-width: func-container(sm)) {
+    text-align: left;
+  }
   &__container {
     @include func-row(g-xl);
     flex-direction: row;
@@ -614,8 +623,12 @@ p {
     }
   }
   &__contact {
-    div {
+    > div {
       flex-direction: row;
+      justify-content: center;
+      @media (min-width: func-container(sm)) {
+      justify-content: flex-start;
+      }
       div {
         border: 0.0625rem solid #404040;
         border-radius: 50%;
@@ -647,6 +660,10 @@ p {
       border-bottom: 0.0625rem solid #404040;
       padding: 0.75rem 0;
       color: #BCBCBC;
+      text-align: center;
+      @media (min-width: func-container(sm)) {
+        text-align: left;
+      }
       &:hover, &:focus {
         border-color: #BCBCBC;
       }
