--- a/src/frame/css/style.scss
+++ b/src/frame/css/style.scss
@@ -104,6 +104,7 @@ p {
     align-items: center;
   }
   &__logo {
+    cursor: pointer;
     p {
       font-family: 'Lora', serif;
       font-size: 1.2em;
@@ -122,6 +123,7 @@ p {
     i {
       font-size: 1.2em;
       padding: 0.2rem;
+      cursor: pointer;
       &:hover {
         color: #FFFFFF;
       }
@@ -134,6 +136,7 @@ p {
     font-family: 'Lora', serif;
     margin-left: 1rem;
     padding-bottom: 0.1rem;
+    cursor: pointer;
     &:hover {
       color: #FFFFFF;
     }
@@ -144,7 +147,6 @@ p {
   background-color: #282828 !important;
   flex-direction: column;
   text-align: center;
-
   color: #696969;
   font-size: 1.5em;
   ul {
@@ -162,7 +164,6 @@ p {
   div {
     flex-direction: row;
     justify-content: center;
-    //margin-top: 1rem;
     div {
       border: 0.0625rem solid #696969;
       border-radius: 50%;
@@ -174,6 +175,7 @@ p {
     }
     i {
       padding: 0.5rem;
+      cursor: pointer;
     }
   }
 }
@@ -231,6 +233,7 @@ p {
       left: calc(50% - 12px);
       font-size: 1.5em;
       opacity: 0.5;
+      cursor: pointer;
       &:hover {
         opacity: 1;
       }
@@ -240,9 +243,7 @@ p {
 
 
 .about {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
-    url("../img/background.jpg");
-  background-size: cover;
+  background-color: rgba(0, 0, 0, 0.1);
   &__container {
     @include func-row(g-xl);
     @media (min-width: func-container(md)) {
@@ -328,12 +329,19 @@ p {
     h2, span, p {
       color: #FFFFFF;
     }
+    i {
+      cursor: pointer;
+    }
   }
 }
 
 
 .cardapio {
   margin-top: -15rem;
+  padding-bottom: 0;
+  @media (min-width: func-container(sm)) {
+    padding-bottom: 6rem;
+  }
   &__container {
     @include func-row(g-xl);
     background-color: #FFFFFF;
@@ -347,10 +355,6 @@ p {
     width: 100%;
     margin-top: 2rem;
     align-self: flex-start;
-   
-    
-   
-    
   }
   &__tab {
     @include comp-tab(line);
@@ -361,6 +365,7 @@ p {
   &__links {
     font-size: 0.8em;
     margin-top: 1rem;
+    cursor: pointer;
     @media(min-width: func-container(md)) {
       margin-top: 0;
     }
@@ -370,21 +375,17 @@ p {
     margin: 0 auto;
     padding: 0 !important;
     align-self: flex-start;
-   
     @media(min-width: func-container(md)) {
       width: 70%; 
     }
   }
   &__item {
-    
-    
     width: 100%;
     margin: 0 auto;
     margin-top: 1rem;
     align-items: center;
     text-align: center;
     @media(min-width: func-container(sm)) {
-      //align-items: stretch;
       flex-direction: row; 
       text-align: left;
     }
@@ -404,26 +405,25 @@ p {
           justify-content: space-between;  
           display: flex;
         }
-        
         span:nth-child(1) {
           font-family: 'Lora', serif;
           font-weight: 700;
           color: #282828;
           position: relative;
-          
           &::after {
             content: " ......";
             margin-left: 0.5rem;
             @media(min-width: func-container(sm)) {
               content: " ........................................................................................................................";
               position: absolute; 
+              top: 0;
+              left: 100%;
             }
           }
         }
         span:nth-child(2) {
           background-color: #FFFFFF;
           z-index: 1;
-          
           padding-left: 0.5rem; 
         }
       }
@@ -444,9 +444,7 @@ p {
 
 
 .testimonials {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
-    url("../img/background.jpg");
-  background-size: cover;
+  background-color: rgba(0, 0, 0, 0.1);
   &__title {
     @include func-row(g-sm);
   }
@@ -458,6 +456,7 @@ p {
   &__link {
     justify-content: center;
     margin-top: 1rem;
+    cursor: pointer;
     div {
       padding: 0.4rem !important;
       border-radius: 50% !important;
@@ -467,7 +466,7 @@ p {
     }
   }
   &__content {
-    @include func-col(sm-6);
+    max-width: 700px;
     text-align: center;
     p {
       margin: 1rem 0;
@@ -641,7 +640,8 @@ p {
       }
       i {
         font-size: 1.3em;
-        padding: 0.5rem
+        padding: 0.5rem;
+        cursor: pointer;
       }
     }
   }
@@ -683,6 +683,7 @@ p {
       letter-spacing: 0.2em;
       text-transform: uppercase;
       font-size: 0.65em;
+      cursor: pointer;
       &:hover {
         background-color: #696969;
         color: #282828;
