--- a/src/frame/css/style.scss
+++ b/src/frame/css/style.scss
@@ -146,6 +146,7 @@ p {
 .menu-colapse-content {
   background-color: #282828 !important;
   flex-direction: column;
+  flex-wrap: nowrap;
   text-align: center;
   color: #696969;
   font-size: 1.5em;
@@ -414,7 +415,7 @@ p {
             content: " ......";
             margin-left: 0.5rem;
             @media(min-width: func-container(sm)) {
-              content: " ........................................................................................................................";
+              content: " ................................................................................................................................................................................................................................................";
               position: absolute; 
               top: 0;
               left: 100%;
