--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -409,6 +409,7 @@ p {
 .menu-colapse-content {
   background-color: #282828 !important;
   flex-direction: column;
+  flex-wrap: nowrap;
   text-align: center;
   color: #696969;
   font-size: 1.5em;
@@ -684,7 +685,7 @@ p {
 }
 @media (min-width: 576px) {
   .cardapio__item > div div span:nth-child(1)::after {
-    content: " ........................................................................................................................";
+    content: " ................................................................................................................................................................................................................................................";
     position: absolute;
     top: 0;
     left: 100%;
